swen430as1/tests/valid/String_Valid_15.while
void main() {
    int[] s = "Hello World";
    assert s == "Hello World";
}
