swen430as1/tests/invalid/real/Real_Invalid_06.while
void main() {
    int[] xs = [0.0];
}
